--- a/memory_rl/conf/config.yaml
+++ b/memory_rl/conf/config.yaml
@@ -1,11 +1,16 @@
 total_timesteps: 1_000_000
-num_train_steps: 100_000
-num_evaluation_steps: 20_000
+num_train_steps: 10_000
+num_evaluation_steps: 10_000
 seed: 0
 num_seeds: 1
+
+
 
 defaults:
   - _self_
   - environment: breakout
   - algorithm: default
   - logger: default
+
+hydra:
+  output_subdir: null
