We have Discrete and continuous PPO Runinng, For the continuous we have to use a non bounded gaussian due to nans, i will fix this soon

--- a/memory_rl/conf/algorithm/rppo_continuous.yaml
+++ b/memory_rl/conf/algorithm/rppo_continuous.yaml
@@ -1,24 +1,26 @@
 # Algorithm specific arguments
 name: rppo_continuous
-total_timesteps: 500000
 learning_rate: 0.0003
-num_envs: 128
-num_eval_envs: 128
-num_steps: 128
-anneal_lr: True
+num_envs: 512
+num_eval_envs: 10
+num_steps: 16
+anneal_lr: False
 gamma: 0.99
 gae_lambda: 0.95
 num_minibatches: 128
-update_epochs: 4
-norm_adv: True
+update_epochs: 5
+norm_adv: False
 clip_coef: 0.2
-clip_vloss: True
+clip_vloss: False
 ent_coef: 0.01
 vf_coef: 0.5
 max_grad_norm: 0.5
 learning_starts: 0
-num_train_steps: 100000
-num_evaluation_steps: 50000
-hidden_dims: [256]
-actor_cell_size: 256
-critic_cell_size: 256
+hidden_dims: [128]
+actor_cell_size: 128
+critic_cell_size: 128
+# Additional parameters for continuous action spaces
+max_action: 1.0
+policy_log_std_min: -10
+policy_log_std_max: 2
+policy_final_fc_init_scale: 1e-3
