--- a/memory_rl/conf/algorithm/rppo.yaml
+++ b/memory_rl/conf/algorithm/rppo.yaml
@@ -1,23 +1,20 @@
 # Algorithm specific arguments
 name: rppo
-total_timesteps: 500000
 learning_rate: 0.0003
-num_envs: 128
-num_steps: 128
-anneal_lr: True
+num_envs: 512
+num_steps: 64
+anneal_lr: False
 gamma: 0.99
-gae_lambda: 0.95
-num_minibatches: 128
-update_epochs: 4
-norm_adv: True
+gae_lambda: 0.5
+num_minibatches: 64
+update_epochs: 5
+norm_adv: False
 clip_coef: 0.2
-clip_vloss: True
+clip_vloss: False
 ent_coef: 0.01
 vf_coef: 0.5
 max_grad_norm: 0.5
 learning_starts: 0
-num_train_steps: 100000
-num_evaluation_steps: 50000
 hidden_dims: [256]
 actor_cell_size: 256
 critic_cell_size: 256
