--- a/memory_rl/conf/algorithm/drqn.yaml
+++ b/memory_rl/conf/algorithm/drqn.yaml
@@ -1,20 +1,41 @@
 name: drqn
 learning_rate:       3e-4
-num_envs:            1
-num_eval_envs:       1
-buffer_size:         10_000
+num_envs:            10
+num_eval_envs:       10
+buffer_size:         1_000_000
 gamma:               0.99
 tau:                 1.0
-target_network_frequency: 500
+target_network_frequency: 1000
 batch_size:          128
 
 cell_size:           128
-sample_sequence_length: 4
+sample_sequence_length: 64
 update_hidden_state: false
 
 start_e:             1.0
-end_e:               0.05
+end_e:               0.1
 exploration_fraction: 0.5
 
 learning_starts:     10000
-train_frequency:     10
+train_frequency:     4
+
+  #name: drqn
+  #learning_rate:       3e-4
+  #num_envs:            10
+  #num_eval_envs:       10
+  #buffer_size:         1_000_000
+  #gamma:               0.99
+  #tau:                 1.0
+  #target_network_frequency: 1000
+  #batch_size:          64
+
+  #cell_size:           128
+  #sample_sequence_length: 64
+  #update_hidden_state: true
+
+  #start_e:             1.0
+  #end_e:               0.1
+  #exploration_fraction: 0.5
+
+  #learning_starts:     10000
+  #train_frequency:     4
