--- a/memory_rl/sweep.yaml
+++ b/memory_rl/sweep.yaml
@@ -1,30 +1,30 @@
 program: main.py
 method: bayes
+project: memory-rl
 metric:
   name: evaluation/episodic_return
   goal: maximize
 
 parameters:
   algorithm.learning_rate:
-    distribution: log_uniform_values
-    min: 1e-5
-    max: 5e-3
+    min: 0.00001
+    max: 0.001
   algorithm.buffer_size:      {values: [10_000, 50_000, 100_000, 500_000]}
   algorithm.gamma:            {values: [0.95, 0.99, 0.999]}
-  algorithm.tau:              {values: [0.95, 1.0]}
   algorithm.target_network_frequency:
-                              {values: [200, 500, 1000, 2000]}
+                              {values: [500, 1000, 2000]}
   algorithm.batch_size:       {values: [64, 128, 256]}
   algorithm.end_e:            {values: [0.01, 0.05, 0.1]}
   algorithm.exploration_fraction:
-                              {values: [0.2, 0.5, 0.8]}
+                              {values: [0.3, 0.5, 0.7]}
   algorithm.learning_starts:  {values: [5000, 10000, 50000]}
-  algorithm.train_frequency:  {values: [2, 5, 10]}
 
 command:
-  - ${env}
   - python
   - ${program}
-  - +
+  - -m
+  - algorithm=dqn
+  - environment=breakout
+  - logger=wandb
   - hydra/launcher=lichtenberg
   - ${args_no_hyphens}
