Verify PPO config and cleanup some lefovers

--- a/memory_rl/conf/algorithm/ppo.yaml
+++ b/memory_rl/conf/algorithm/ppo.yaml
@@ -1,14 +1,14 @@
 # Algorithm specific arguments
 name: ppo
-learning_rate: 0.001
-num_envs: 8
-num_eval_envs: 8
-num_steps: 256
+learning_rate: 5e-3
+num_envs: 64
+num_eval_envs: 64
+num_steps: 128
 anneal_lr: False
-gamma: 0.98
-gae_lambda: 0.8
-num_minibatches: 64
-update_epochs: 20
+gamma: 0.99
+gae_lambda: 0.95
+num_minibatches: 8
+update_epochs: 8
 normalize_advantage: True
 clip_coef: 0.2
 clip_vloss: False
