--- a/memory_rl/conf/algorithm/rppo.yaml
+++ b/memory_rl/conf/algorithm/rppo.yaml
@@ -1,14 +1,14 @@
-# Algorithm specific arguments
 name: rppo
-learning_rate: 0.0003
-num_envs: 512
+learning_rate: 3e-4
+num_envs: 64
+num_eval_envs: 64
 num_steps: 64
 anneal_lr: False
 gamma: 0.99
-gae_lambda: 0.5
-num_minibatches: 64
-update_epochs: 5
-norm_adv: False
+gae_lambda: 0.95
+num_minibatches: 8
+update_epochs: 8
+normalize_advantage: True
 clip_coef: 0.2
 clip_vloss: False
 ent_coef: 0.01
