--- a/memory_rl/conf/algorithm/rsac.yaml
+++ b/memory_rl/conf/algorithm/rsac.yaml
@@ -2,15 +2,16 @@ name: rsac
 policy_lr:            3e-4
 q_lr:           3e-4
 temp_lr:             3e-4
-num_envs:            5
+num_envs:            10
 num_eval_envs:       10
 buffer_size:         1_000_000
 gamma:               0.99
 tau:                 5e-3
-train_frequency:     5
+train_frequency:     10
 target_update_frequency: 1
 batch_size:          256
 hidden_dims:         [256]
+cell: memory_rl.recurrent_networks.MaskedGRUCell
 actor_cell_size:           256
 critic_cell_size:           256
 sample_sequence_length:     8
