--- a/memory_rl/conf/config.yaml
+++ b/memory_rl/conf/config.yaml
@@ -8,6 +8,9 @@ defaults:
   - _self_
   - algorithm: default
   - environment: default
+  - network/feature_extractor: mlp
+  - network/torso: mlp
+  - network/head: q_network
   - logger: default
   - optional hyperparameter: ${algorithm}/${environment}
 
