--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,17 @@
+[build-system]
+requires = ["setuptools>=64", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages   = ["memory_rl", "popjaxrl"]
+py-modules = ["main"] 
+
 [project]
 name = "memory-rl"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = "==3.10.*"
 dependencies = [
     "brax>=0.12.4",
     "distrax>=0.1.5",
@@ -17,3 +25,10 @@ dependencies = [
     "omegaconf>=2.3.0",
     "wandb>=0.21.0",
 ]
+
+[project.scripts]
+main = "main:main"
+
+[tool.uv]
+package = true
+
