--- a/memory_rl/conf/algorithm/drqn.yaml
+++ b/memory_rl/conf/algorithm/drqn.yaml
@@ -9,8 +9,10 @@ target_network_frequency: 1000
 batch_size:          128
 
 # cell: memory_rl.recurrent_networks.MaskedOptimizedLSTMCell
-cell: memory_rl.recurrent_networks.MaskedGRUCell
-cell_size:           128
+cell: 
+  _target_: memory_rl.networks.recurrent.MaskedGRUCell
+  features:           128
+
 sample_sequence_length: 4
 update_hidden_state: false
 
@@ -21,3 +23,6 @@ exploration_fraction: 0.5
 learning_starts:     10000
 train_frequency:     10
 
+feature_extractor:
+  _target_: memory_rl.networks.feature_extractors.MLP
+  features: [64]
