--- a/memory_rl/conf/algorithm/ppo.yaml
+++ b/memory_rl/conf/algorithm/ppo.yaml
@@ -18,3 +18,6 @@ max_grad_norm: 0.5
 learning_starts: 0
 hidden_dims: [256]
 
+feature_extractor:
+  _target_: memory_rl.networks.feature_extractors.MLP
+  features: [256]
