--- a/memory_rl/conf/algorithm/rppo.yaml
+++ b/memory_rl/conf/algorithm/rppo.yaml
@@ -15,13 +15,17 @@ ent_coef: 0.01
 vf_coef: 0.5
 max_grad_norm: 0.5
 learning_starts: 0
-hidden_dims: [256]
-actor_cell: 
-  _target_: memory_rl.networks.recurrent.MaskedGRUCell
-  features: 256
-critic_cell: 
-  _target_: memory_rl.networks.recurrent.MaskedGRUCell
-  features: 256
-feature_extractor:
-  _target_: memory_rl.networks.feature_extractors.MLP
-  features: [256]
+actor:
+  feature_extractor:
+    _target_: memory_rl.networks.feature_extractors.MLP
+    features: [256]
+  cell: 
+    _target_: memory_rl.networks.recurrent.MaskedGRUCell
+    features: 256
+critic: 
+  feature_extractor:
+    _target_: memory_rl.networks.feature_extractors.MLP
+    features: [256]
+  cell:
+    _target_: memory_rl.networks.recurrent.MaskedGRUCell
+    features: 256
