--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ dependencies = [
     "wandb>=0.21.0",
 ]
 
+[project.optional-dependencies]
+cuda = ["jax[cuda12]"]
+
 [project.scripts]
 main = "main:main"
 
