--- a/memory_rl/conf/algorithm/rppo.yaml
+++ b/memory_rl/conf/algorithm/rppo.yaml
@@ -17,15 +17,28 @@ max_grad_norm: 0.5
 learning_starts: 0
 actor:
   feature_extractor:
-    _target_: memory_rl.networks.feature_extractors.MLP
+    _target_: memory_rl.networks.MLP
     features: [256]
+    kernel_init:
+      _target_: flax.linen.initializers.orthogonal
+      scale: 1.414
   cell: 
     _target_: memory_rl.networks.recurrent.MaskedGRUCell
     features: 256
+    kernel_init:
+      _target_: flax.linen.initializers.orthogonal
+      scale: 1.0
+
 critic: 
   feature_extractor:
-    _target_: memory_rl.networks.feature_extractors.MLP
+    _target_: memory_rl.networks.MLP
     features: [256]
+    kernel_init:
+      _target_: flax.linen.initializers.orthogonal
+      scale: 1.414
   cell:
     _target_: memory_rl.networks.recurrent.MaskedGRUCell
     features: 256
+    kernel_init:
+      _target_: flax.linen.initializers.orthogonal
+      scale: 1.0
