--- a/memory_rl/conf/algorithm/sacd.yaml
+++ b/memory_rl/conf/algorithm/sacd.yaml
@@ -18,3 +18,19 @@ policy_final_fc_init_scale: 1e-3
 target_entropy_multiplier: 0.5
 backup_entropy:      true
 learning_starts:     5_000
+
+actor:
+  feature_extractor:
+    _target_: memory_rl.networks.MLP
+    features: [256]
+  torso:
+    _target_: memory_rl.networks.MLP
+    features: [256]
+
+critic:
+  feature_extractor:
+    _target_: memory_rl.networks.MLP
+    features: [256]
+  torso:
+    _target_: memory_rl.networks.MLP
+    features: [256]
