--- a/memory_rl/conf/algorithm/sac.yaml
+++ b/memory_rl/conf/algorithm/sac.yaml
@@ -14,9 +14,9 @@ init_temperature:    1.0
 policy_log_std_min: -10.0
 policy_log_std_max: 2.0
 policy_final_fc_init_scale: 1e-3
-target_entropy_multiplier: 0.5
+target_entropy_multiplier: 1.0
 max_action:          1.0
-backup_entropy:      true
+backup_entropy:      false
 learning_starts:     5_000
 
 actor:
@@ -26,6 +26,10 @@ actor:
   torso:
     _target_: memory_rl.networks.MLP
     features: [256]
+  head:
+    kernel_init:
+      _target_: flax.linen.initializers.orthogonal
+      scale: 1e-3
 
 critic:
   feature_extractor:
