--- a/memory_rl/conf/algorithm/rppo.yaml
+++ b/memory_rl/conf/algorithm/rppo.yaml
@@ -23,7 +23,7 @@ actor:
       _target_: flax.linen.initializers.orthogonal
       scale: 1.414
   cell: 
-    _target_: memory_rl.networks.recurrent.MaskedGRUCell
+    _target_: flax.linen.GRUCell
     features: 256
     kernel_init:
       _target_: flax.linen.initializers.orthogonal
@@ -37,7 +37,7 @@ critic:
       _target_: flax.linen.initializers.orthogonal
       scale: 1.414
   cell:
-    _target_: memory_rl.networks.recurrent.MaskedGRUCell
+    _target_: flax.linen.GRUCell
     features: 256
     kernel_init:
       _target_: flax.linen.initializers.orthogonal
