--- a/memory_rl/conf/algorithm/rsacd.yaml
+++ b/memory_rl/conf/algorithm/rsacd.yaml
@@ -22,7 +22,7 @@ actor:
     features: [256]
   torso:
     cell: 
-      _target_: memory_rl.networks.recurrent.MaskedGRUCell
+      _target_: flax.linen.GRUCell
       features: 256
   head:
     kernel_init:
@@ -35,5 +35,5 @@ critic:
     features: [256]
   torso:
     cell: 
-      _target_: memory_rl.networks.recurrent.MaskedGRUCell
+      _target_: flax.linen.GRUCell
       features: 256
