--- a/memory_rl/conf/logger/wandb.yaml
+++ b/memory_rl/conf/logger/wandb.yaml
@@ -1,4 +1,6 @@
-track: true
-debug: true
+_target_: memory_rl.logger.WandbLogger
 project: memory-rl
 entity: noahfarr
+name: ${algorithm.name}_${environment.env_id}_${seed}_${now:%Y%m%d_%H%M%S}
+group: ${algorithm.name}_${environment.env_id}
+mode: online
