--- a/memory_rl/conf/config.yaml
+++ b/memory_rl/conf/config.yaml
@@ -7,6 +7,7 @@ num_seeds: 1
 defaults:
   - _self_
   - algorithm: default
+  - mode: TBPTT
   - environment: default
   - network/feature_extractor: mlp
   - network/torso: mlp
