--- a/memory_rl/conf/network/feature_extractor/cnn.yaml
+++ b/memory_rl/conf/network/feature_extractor/cnn.yaml
@@ -1,11 +1,4 @@
 _target_: memory_rl.networks.CNN
-layers:
-  module:
-    _target_: flax.linen.Conv
-    features: 16
-    kernel_size: [3, 3]
-    strides: [1, 1]
-    padding: "VALID"
-    use_bias: false
-  activation:
-    _target_: flax.linen.relu
+kernel_sizes: [[3, 3]]
+strides: [[1, 1]]
+
