--- a/memory_rl/conf/network/torso/mlp.yaml
+++ b/memory_rl/conf/network/torso/mlp.yaml
@@ -1,8 +1,2 @@
 _target_: memory_rl.networks.MLP
-layers:
-  module:
-    _target_: flax.linen.Dense
-    features: 128
-    use_bias: true
-  activation:
-    _target_: flax.linen.relu
+features: [128]
