--- a/memory_rl/conf/algorithm/dqn.yaml
+++ b/memory_rl/conf/algorithm/dqn.yaml
@@ -1,3 +1,6 @@
+defaults:
+  - /network/feature_extractor: mlp
+  - /network/torso: mlp
 name: dqn
 learning_rate:       3e-4
 num_envs:            10
@@ -14,11 +17,3 @@ exploration_fraction: 0.5
 
 learning_starts:     10000
 train_frequency:     10
-
-feature_extractor:
-  _target_: memory_rl.networks.MLP
-  features: [128]
-
-torso:
-  _target_: memory_rl.networks.MLP
-  features: [128]
