--- a/memory_rl/conf/algorithm/drqn.yaml
+++ b/memory_rl/conf/algorithm/drqn.yaml
@@ -1,3 +1,8 @@
+defaults:
+  - /network/feature_extractor@feature_extractor: mlp
+  - /network/torso@torso: lstm
+  - /mode: TBPTT
+
 name: drqn
 learning_rate:       3e-4
 num_envs:            10
@@ -16,26 +21,3 @@ exploration_fraction: 0.5
 
 learning_starts:     10000
 train_frequency:     10
-
-feature_extractor:
-  _target_: memory_rl.networks.MLP
-  features: [128]
-cell: 
-  _target_: flax.linen.GRUCell
-  features:           128
-  # _target_: memory_rl.networks.recurrent.FFMCell
-  # input_size: 128
-  # output_size: 128
-  # memory_size: 128
-  # context_size: 32
-  # _target_: memory_rl.networks.recurrent.GPTRNNCell
-  # max_sequence_length: 4
-  # config:
-  #   _target_: memory_rl.networks.recurrent.GPTConfig
-  #   # num_embeds: ${algorithm.feature_extractor.features[-1]}
-  #   num_embeds: 128
-  #   num_heads: 4
-  #   num_layers: 4
-  #   block_size: 32
-  #   vocab_size: 1
-  #
