--- a/memory_rl/conf/algorithm/rppo.yaml
+++ b/memory_rl/conf/algorithm/rppo.yaml
@@ -1,3 +1,10 @@
+defaults:
+  - /network/feature_extractor@actor.feature_extractor: mlp
+  - /network/torso@actor.torso: gru
+    
+  - /network/feature_extractor@critic.feature_extractor: mlp
+  - /network/torso@critic.torso: gru
+
 name: rppo
 learning_rate: 3e-4
 num_envs: 64
@@ -15,30 +22,14 @@ ent_coef: 0.01
 vf_coef: 0.5
 max_grad_norm: 0.5
 learning_starts: 0
+
 actor:
   feature_extractor:
-    _target_: memory_rl.networks.MLP
-    features: [256]
     kernel_init:
       _target_: flax.linen.initializers.orthogonal
       scale: 1.414
-  cell: 
-    _target_: flax.linen.GRUCell
-    features: 256
-    kernel_init:
-      _target_: flax.linen.initializers.orthogonal
-      scale: 1.0
-
 critic: 
   feature_extractor:
-    _target_: memory_rl.networks.MLP
-    features: [256]
     kernel_init:
       _target_: flax.linen.initializers.orthogonal
       scale: 1.414
-  cell:
-    _target_: flax.linen.GRUCell
-    features: 256
-    kernel_init:
-      _target_: flax.linen.initializers.orthogonal
-      scale: 1.0
