--- a/memory_rl/conf/algorithm/rppo_continuous.yaml
+++ b/memory_rl/conf/algorithm/rppo_continuous.yaml
@@ -1,4 +1,10 @@
-# Algorithm specific arguments
+defaults:
+  - /network/feature_extractor@actor.feature_extractor: mlp
+  - /network/torso@actor.torso: gru
+    
+  - /network/feature_extractor@critic.feature_extractor: mlp
+  - /network/torso@critic.torso: gru
+
 name: rppo_continuous
 learning_rate: 0.0003
 num_envs: 512
@@ -24,28 +30,11 @@ policy_final_fc_init_scale: 1e-3
 
 actor:
   feature_extractor:
-    _target_: memory_rl.networks.MLP
-    features: [256]
     kernel_init:
       _target_: flax.linen.initializers.orthogonal
       scale: 1.414
-  cell: 
-    _target_: flax.linen.GRUCell
-    features: 256
-    kernel_init:
-      _target_: flax.linen.initializers.orthogonal
-      scale: 1.0
-
 critic: 
   feature_extractor:
-    _target_: memory_rl.networks.MLP
-    features: [256]
     kernel_init:
       _target_: flax.linen.initializers.orthogonal
       scale: 1.414
-  cell:
-    _target_: flax.linen.GRUCell
-    features: 256
-    kernel_init:
-      _target_: flax.linen.initializers.orthogonal
-      scale: 1.0
