--- a/memory_rl/conf/algorithm/rsac.yaml
+++ b/memory_rl/conf/algorithm/rsac.yaml
@@ -1,3 +1,11 @@
+defaults:
+  - /network/feature_extractor@actor.feature_extractor: mlp
+  - /network/torso@actor.torso: gru
+
+  - /network/feature_extractor@critic.feature_extractor: mlp
+  - /network/torso@critic.torso: gru
+  - /mode: TBPTT
+
 name: rsac
 policy_lr:            3e-4
 q_lr:           3e-4
@@ -15,27 +23,4 @@ target_entropy_multiplier: 1.0
 max_action:          1.0
 backup_entropy:      false
 learning_starts:     5_000
-
-
-actor:
-  feature_extractor:
-    _target_: memory_rl.networks.MLP
-    features: [256]
-  torso:
-    cell: 
-      _target_: flax.linen.GRUCell
-      features: 256
-  head:
-    kernel_init:
-      _target_: flax.linen.initializers.orthogonal
-      scale: 1e-3
-
-critic:
-  feature_extractor:
-    _target_: memory_rl.networks.MLP
-    features: [256]
-  torso:
-    cell: 
-      _target_: flax.linen.GRUCell
-      features: 256
 
