--- a/memory_rl/conf/algorithm/rsacd.yaml
+++ b/memory_rl/conf/algorithm/rsacd.yaml
@@ -1,3 +1,12 @@
+defaults:
+  - /network/feature_extractor@actor.feature_extractor: mlp
+  - /network/torso@actor.torso: gru
+
+  - /network/feature_extractor@critic.feature_extractor: mlp
+  - /network/torso@critic.torso: gru
+
+  - /mode: TBPTT
+
 name: rsacd
 policy_lr:            3e-4
 q_lr:           3e-4
@@ -15,25 +24,3 @@ init_temperature:    1.0
 policy_final_fc_init_scale: 1e-3
 target_entropy_multiplier: 0.5
 learning_starts:     10_000
-
-actor:
-  feature_extractor:
-    _target_: memory_rl.networks.MLP
-    features: [128]
-  torso:
-    cell: 
-      _target_: flax.linen.GRUCell
-      features: 128
-  head:
-    kernel_init:
-      _target_: flax.linen.initializers.orthogonal
-      scale: 1e-3
-
-critic:
-  feature_extractor:
-    _target_: memory_rl.networks.MLP
-    features: [128]
-  torso:
-    cell: 
-      _target_: flax.linen.GRUCell
-      features: 128
