--- a/memory_rl/conf/algorithm/sac.yaml
+++ b/memory_rl/conf/algorithm/sac.yaml
@@ -1,3 +1,10 @@
+defaults:
+  - /network/feature_extractor@actor.feature_extractor: mlp
+  - /network/torso@actor.torso: mlp
+
+  - /network/feature_extractor@critic.feature_extractor: mlp
+  - /network/torso@critic.torso: mlp
+
 name: sac
 policy_lr:            3e-4
 q_lr:           3e-4
@@ -18,24 +25,3 @@ target_entropy_multiplier: 1.0
 max_action:          1.0
 backup_entropy:      false
 learning_starts:     5_000
-
-actor:
-  feature_extractor:
-    _target_: memory_rl.networks.MLP
-    features: [256]
-  torso:
-    _target_: memory_rl.networks.MLP
-    features: [256]
-  head:
-    kernel_init:
-      _target_: flax.linen.initializers.orthogonal
-      scale: 1e-3
-
-critic:
-  feature_extractor:
-    _target_: memory_rl.networks.MLP
-    features: [256]
-  torso:
-    _target_: memory_rl.networks.MLP
-    features: [256]
-
