--- a/memory_rl/conf/algorithm/sacd.yaml
+++ b/memory_rl/conf/algorithm/sacd.yaml
@@ -1,3 +1,10 @@
+defaults:
+  - /network/feature_extractor@actor.feature_extractor: mlp
+  - /network/torso@actor.torso: mlp
+
+  - /network/feature_extractor@critic.feature_extractor: mlp
+  - /network/torso@critic.torso: mlp
+
 name: sacd
 policy_lr:            3e-4
 q_lr:           3e-4
@@ -17,23 +24,3 @@ policy_final_fc_init_scale: 1e-3
 target_entropy_multiplier: 1
 backup_entropy:      true
 learning_starts:     5_000
-
-actor:
-  feature_extractor:
-    _target_: memory_rl.networks.MLP
-    features: [256]
-  torso:
-    _target_: memory_rl.networks.MLP
-    features: [256]
-  head:
-    kernel_init:
-      _target_: flax.linen.initializers.orthogonal
-      scale: 1e-3
-
-critic:
-  feature_extractor:
-    _target_: memory_rl.networks.MLP
-    features: [256]
-  torso:
-    _target_: memory_rl.networks.MLP
-    features: [256]
