--- a/memory_rl/conf/algorithm/drqn.yaml
+++ b/memory_rl/conf/algorithm/drqn.yaml
@@ -1,6 +1,6 @@
 defaults:
   - /network/feature_extractor@feature_extractor: mlp
-  - /network/torso@torso: lstm
+  - /network/torso@torso: gru
   - /mode: TBPTT
 
 name: drqn
