Fix bug in RPPO

--- a/memory_rl/conf/algorithm/ppo.yaml
+++ b/memory_rl/conf/algorithm/ppo.yaml
@@ -6,20 +6,20 @@ defaults:
   - /network/torso@critic.torso: mlp
 
 name: ppo
-learning_rate: 5e-3
-num_envs: 64
-num_eval_envs: 64
+learning_rate: 2.5e-4
+num_envs: 4
+num_eval_envs: 4
 num_steps: 128
-anneal_lr: False
+anneal_lr: True
 gamma: 0.99
 gae_lambda: 0.95
-num_minibatches: 8
-update_epochs: 8
+num_minibatches: 4
+update_epochs: 4
 batch_size: ${eval:${.num_envs}*${.num_steps}}
 normalize_advantage: True
 clip_coef: 0.2
 clip_vloss: False
-ent_coef: 0.0
+ent_coef: 0.01
 vf_coef: 0.5
 max_grad_norm: 0.5
 learning_starts: 0
