--- a/memory_rl/conf/algorithm/rppo.yaml
+++ b/memory_rl/conf/algorithm/rppo.yaml
@@ -6,19 +6,19 @@ defaults:
   - /network/torso@critic.torso: gru
 
 name: rppo
-learning_rate: 3e-4
-num_envs: 64
-num_eval_envs: 64
-num_steps: 64
-anneal_lr: False
+learning_rate: 2.5e-4
+num_envs: 4
+num_eval_envs: 4
+num_steps: 128
+anneal_lr: True
 gamma: 0.99
 gae_lambda: 0.95
-num_minibatches: 8
-update_epochs: 8
+num_minibatches: 4
+update_epochs: 4
 normalize_advantage: True
 clip_coef: 0.2
 clip_vloss: False
-ent_coef: 0.01
+ent_coef: 0.001
 vf_coef: 0.5
 max_grad_norm: 0.5
 learning_starts: 0
@@ -26,6 +26,10 @@ learning_starts: 0
 actor:
   feature_extractor:
     kernel_init:
+      _target_: flax.linen.initializers.orthogonal
+      scale: 1.414
+  torso:
+    kernel_init: 
       _target_: flax.linen.initializers.orthogonal
       scale: 1.414
 critic: 
