Add possibility to encode actions, rewards and done with observation

--- a/memory_rl/conf/algorithm/dqn.yaml
+++ b/memory_rl/conf/algorithm/dqn.yaml
@@ -1,6 +1,7 @@
 defaults:
-  - /network/feature_extractor@feature_extractor: mlp
-  - /network/torso@torso: mlp
+  - feature_extractor: shared
+  - torso: mlp
+
 name: dqn
 learning_rate:       3e-4
 num_envs:            10
