--- a/memory_rl/conf/algorithm/rppo.yaml
+++ b/memory_rl/conf/algorithm/rppo.yaml
@@ -1,9 +1,10 @@
 defaults:
-  - /network/feature_extractor@actor.feature_extractor: mlp
-  - /network/torso@actor.torso: gru
+  - feature_extractor@actor.feature_extractor: shared
+  - torso@actor.torso: gru
     
-  - /network/feature_extractor@critic.feature_extractor: mlp
-  - /network/torso@critic.torso: gru
+  - feature_extractor@critic.feature_extractor: shared
+  - torso@critic.torso: gru
+
 
 name: rppo
 learning_rate: 2.5e-4
@@ -25,15 +26,17 @@ learning_starts: 0
 
 actor:
   feature_extractor:
-    kernel_init:
-      _target_: flax.linen.initializers.orthogonal
-      scale: 1.414
+    extractor:
+      kernel_init:
+        _target_: flax.linen.initializers.orthogonal
+        scale: 1.414
   torso:
     kernel_init: 
       _target_: flax.linen.initializers.orthogonal
       scale: 1.414
 critic: 
   feature_extractor:
-    kernel_init:
-      _target_: flax.linen.initializers.orthogonal
-      scale: 1.414
+    extractor: 
+      kernel_init:
+        _target_: flax.linen.initializers.orthogonal
+        scale: 1.414
