--- a/memory_rl/conf/algorithm/rppo_continuous.yaml
+++ b/memory_rl/conf/algorithm/rppo_continuous.yaml
@@ -1,9 +1,9 @@
 defaults:
-  - /network/feature_extractor@actor.feature_extractor: mlp
-  - /network/torso@actor.torso: gru
+  - feature_extractor@actor.feature_extractor: shared
+  - torso@actor.torso: gru
     
-  - /network/feature_extractor@critic.feature_extractor: mlp
-  - /network/torso@critic.torso: gru
+  - feature_extractor@critic.feature_extractor: shared
+  - torso@critic.torso: gru
 
 name: rppo_continuous
 learning_rate: 0.0003
@@ -30,11 +30,13 @@ policy_final_fc_init_scale: 1e-3
 
 actor:
   feature_extractor:
-    kernel_init:
-      _target_: flax.linen.initializers.orthogonal
-      scale: 1.414
+    extractor:
+      kernel_init:
+        _target_: flax.linen.initializers.orthogonal
+        scale: 1.414
 critic: 
   feature_extractor:
-    kernel_init:
-      _target_: flax.linen.initializers.orthogonal
-      scale: 1.414
+    extractor:
+      kernel_init:
+        _target_: flax.linen.initializers.orthogonal
+        scale: 1.414
