--- a/memory_rl/conf/algorithm/sacd.yaml
+++ b/memory_rl/conf/algorithm/sacd.yaml
@@ -1,38 +1,24 @@
 defaults:
-  - /network/feature_extractor@actor.feature_extractor: mlp
-  - /network/torso@actor.torso: mlp
+  - feature_extractor@actor.feature_extractor: shared
+  - torso@actor.torso: mlp
 
-  - /network/feature_extractor@critic.feature_extractor: mlp
-  - /network/torso@critic.torso: mlp
+  - feature_extractor@critic.feature_extractor: shared
+  - torso@critic.torso: mlp
 
 name: sacd
-policy_lr:            3e-4
-q_lr:           3e-4
+policy_lr:           3e-4
+q_lr:                3e-4
 temp_lr:             3e-4
-num_envs:            10
-num_eval_envs:       10
-buffer_size:         10_000
+num_envs:            4
+num_eval_envs:       4
+buffer_size:         1_000_000
 gamma:               0.99
-tau:                 5e-3
-train_frequency:     10
+tau:                 0.005
+train_frequency:     4
 target_update_frequency: 1
-batch_size:          256
-init_temperature:    1.0
-policy_log_std_min: -10.0
-policy_log_std_max: 2.0
-policy_final_fc_init_scale: 1e-3
-target_entropy_multiplier: 1
-backup_entropy:      true
+batch_size:          64
+init_temperature:    0.1
+target_entropy_scale: 0.98
+backup_entropy:      false
 learning_starts:     5_000
 
-actor:
-  feature_extractor:
-    features: [256]
-  torso:
-    features: [256]
-
-critic:
-  feature_extractor:
-    features: [256]
-  torso:
-    features: [256]
