--- a/memory_rl/conf/hyperparameter/sacd/tmaze.yaml
+++ b/memory_rl/conf/hyperparameter/sacd/tmaze.yaml
@@ -1,18 +1,7 @@
 # @package _global_
 
-
 algorithm:
-  actor:
-    feature_extractor:
-      features: [256]
-    torso:
-      features: [256]
-
-  critic:
-    feature_extractor:
-      features: [256]
-    torso:
-      features: [256]
   tau: 0.005
   init_temperature: 0.1
   buffer_size: 1_000_000
+  batch_size: 64
