--- a/memory_rl/conf/algorithm/dqn.yaml
+++ b/memory_rl/conf/algorithm/dqn.yaml
@@ -1,6 +1,7 @@
 defaults:
   - feature_extractor: shared
   - torso: mlp
+  - buffer: flat_buffer
 
 name: dqn
 learning_rate:       3e-4
@@ -13,8 +14,8 @@ target_network_frequency: 1000
 batch_size:          128
 
 start_e:             1.0
-end_e:               0.05
-exploration_fraction: 0.5
+end_e:               0.01
+exploration_fraction: 0.2
 
 learning_starts:     10000
 train_frequency:     10
