--- a/memory_rl/conf/config.yaml
+++ b/memory_rl/conf/config.yaml
@@ -1,7 +1,8 @@
-total_timesteps: 5_000_000
+total_timesteps: 1_000_000
 num_train_steps: 100_000
 num_evaluation_steps: 10_000
 seed: 0
+num_seeds: 1
 
 defaults:
   - _self_
