--- a/memory_rl/conf/algorithm/rsacd.yaml
+++ b/memory_rl/conf/algorithm/rsacd.yaml
@@ -5,6 +5,7 @@ defaults:
   - feature_extractor@critic.feature_extractor: shared
   - torso@critic.torso: gru
   - mode: BPTT
+  - buffer: episode_buffer
 
 name: rsacd
 policy_lr:            3e-4
