--- a/memory_rl/conf/config.yaml
+++ b/memory_rl/conf/config.yaml
@@ -1,6 +1,6 @@
-total_timesteps: 500_000
-num_train_steps: 100_000
-num_evaluation_steps: 10_000
+total_timesteps: 1_000_000
+num_train_steps: 50_000
+evaluate_every: 100_000
 seed: 0
 num_seeds: 1
 
