--- a/memory_rl/conf/algorithm/torso/gtrxl.yaml
+++ b/memory_rl/conf/algorithm/torso/gtrxl.yaml
@@ -1,4 +1,8 @@
 _target_: memory_rl.networks.recurrent.GTrXLCell
-features: 128
-n_layers: 2
-n_heads: 2
+features: 256
+n_layers: 12
+n_heads: 8
+d_head: 32
+d_inner: 1024
+mem_len: 512
+
