--- a/memory_rl/conf/environment/bsuite_memory_chain.yaml
+++ b/memory_rl/conf/environment/bsuite_memory_chain.yaml
@@ -1,5 +1,9 @@
 env_id: MemoryChain-bsuite
 
+wrappers:
+ - _target_: memory_rl.utils.wrapper.BSuiteWrapper
+
+
 parameters:
   memory_length: 5
   max_steps_in_episode: ${eval:${.memory_length}+1}
