--- a/memory_rl/conf/environment/bsuite_umbrella_chain.yaml
+++ b/memory_rl/conf/environment/bsuite_umbrella_chain.yaml
@@ -1,5 +1,8 @@
 env_id: UmbrellaChain-bsuite
 
+wrappers:
+ - _target_: memory_rl.utils.wrapper.BSuiteWrapper
+
 parameters:
   chain_length: 10
   max_steps_in_episode: ${eval:${.chain_length}+1}
