--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ name = "memory-rl"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = "==3.10.*"
+requires-python = "==3.10.18"
 dependencies = [
     "jax==0.6.0",
     "brax>=0.12.4",
@@ -28,6 +28,8 @@ dependencies = [
     "hydra-joblib-launcher>=1.2.0",
     "pobax>=0.0.1",
     "craftax>=1.5.0",
+    "tqdx>=0.1.3",
+    "orbax>=0.1.9",
 ]
 
 [project.optional-dependencies]
