--- a/memory_rl/conf/algorithm/torso/xlstm.yaml
+++ b/memory_rl/conf/algorithm/torso/xlstm.yaml
@@ -1,16 +1,16 @@
 _target_: memory_rl.networks.recurrent.xLSTMCell
 
 features: 128
-pattern: ["s", "m"]  # any order/length
+pattern: ["s", "m", "s"]  # any order/length
 
 s_kwargs:
-  num_heads: 8
+  num_heads: 4
   use_causal_conv: true
   conv_kernel_size: 4
   mlp_pf: ${eval:4/3}
 
 m_kwargs:
-  num_heads: 8
+  num_heads: 4
   up_proj_factor: 2
   conv1d_kernel_size: 4
   qkv_proj_blocksize: 4
