--- a/memory_rl/conf/hydra/launcher/lichtenberg.yaml
+++ b/memory_rl/conf/hydra/launcher/lichtenberg.yaml
@@ -1,19 +1,20 @@
 defaults:
-  - submitit_slurm   # brings in _target_
-  - _self_
+    - submitit_slurm   # brings in _target_
+    - _self_
 
-timeout_min: 1440          # wall-time [h] × 60
+timeout_min: 240          # wall-time [h] × 60
 nodes: 1
-cpus_per_task: 1
 tasks_per_node: 1
+cpus_per_task: 1
+gres: "gpu:a40:1"
+mem_per_cpu: 4G
 
-gpus_per_node: 1
+account: project02654
 
-additional_parameters:
-  account: project02654
-  gres: gpu:1
-  mem_per_cpu: 4G
-    
 setup:
+    - "module purge"
     - "module load cuda cudnn"
     - "conda activate memory-rl"
+    - "export XLA_PYTHON_CLIENT_PREALLOCATE=false"
+    - "export XLA_PYTHON_CLIENT_ALLOCATOR=platform"
+
