--- a/memory_rl/conf/algorithm/rsac.yaml
+++ b/memory_rl/conf/algorithm/rsac.yaml
@@ -8,9 +8,9 @@ defaults:
   - buffer: episode_buffer
 
 name: rsac
-policy_lr:            3e-4
-q_lr:           3e-4
-temp_lr:             3e-4
+actor_lr:            3e-4
+critic_lr:           3e-4
+alpha_lr:             3e-4
 num_envs:            10
 num_eval_envs:       10
 buffer_size:         100_000
@@ -19,7 +19,7 @@ tau:                 5e-3
 train_frequency:     10
 target_update_frequency: 1
 batch_size:          256
-init_temperature:    1.0
+initial_alpha:    1.0
 target_entropy_multiplier: 1.0
 max_action:          1.0
 backup_entropy:      false
