--- a/memory_rl/conf/algorithm/rsacd.yaml
+++ b/memory_rl/conf/algorithm/rsacd.yaml
@@ -8,9 +8,9 @@ defaults:
   - buffer: episode_buffer
 
 name: rsacd
-policy_lr:            3e-4
-q_lr:           3e-4
-temp_lr:             3e-4
+actor_lr:            3e-4
+critic_lr:           3e-4
+alpha_lr:             3e-4
 num_envs:            10
 num_eval_envs:       10
 buffer_size:         10_000
@@ -20,7 +20,6 @@ train_frequency:     10
 target_update_frequency: 10
 batch_size:          128
 backup_entropy:      False
-init_temperature:    0.1
-policy_final_fc_init_scale: 1e-3
+initial_alpha:    0.1
 target_entropy_scale: 0.98
 learning_starts:     10_000
