--- a/memory_rl/conf/algorithm/sacd.yaml
+++ b/memory_rl/conf/algorithm/sacd.yaml
@@ -8,9 +8,9 @@ defaults:
   - buffer: flat_buffer
 
 name: sacd
-policy_lr:           3e-4
-q_lr:                3e-4
-temp_lr:             3e-4
+actor_lr:           3e-4
+critic_lr:                3e-4
+alpha_lr:             3e-4
 num_envs:            10
 num_eval_envs:       10
 buffer_size:         10_000
@@ -19,7 +19,7 @@ tau:                 0.005
 train_frequency:     10
 target_update_frequency: 10
 batch_size:          128
-init_temperature:    0.1
+initial_alpha:    0.1
 target_entropy_scale: 0.98
 backup_entropy:      false
 learning_starts:     10_000
