--- a/memory_rl/conf/algorithm/dqn.yaml
+++ b/memory_rl/conf/algorithm/dqn.yaml
@@ -12,6 +12,7 @@ gamma:               0.99
 tau:                 1.0
 target_network_frequency: 1000
 batch_size:          128
+double: False
 
 start_e:             1.0
 end_e:               0.01
