--- a/memory_rl/conf/hyperparameter/rppo/minatar_asterix.yaml
+++ b/memory_rl/conf/hyperparameter/rppo/minatar_asterix.yaml
@@ -13,7 +13,7 @@ algorithm:
   gae_lambda: 0.95
   num_minibatches: 4
   update_epochs: 4
-  batch_size: ${eval:${.num_envs}*${.num_steps}}
+  batch_size: ${eval:${.num_envs}*${.mode.length}}
   normalize_advantage: True
   clip_coef: 0.2
   clip_vloss: False
