--- a/memory_rl/conf/hyperparameter/sacd/minatar_breakout.yaml
+++ b/memory_rl/conf/hyperparameter/sacd/minatar_breakout.yaml
@@ -6,17 +6,18 @@ evaluate_every:      100_000
 
 algorithm:
   actor_lr:              3e-4
-  critic_lr:             1e-3
-  alpha_lr:              3e-4
+  critic_lr:             3e-4
+  alpha_lr:              1e-3
   num_envs:              4
   num_eval_envs:         10
   buffer_size:           100_000
   gamma:                 0.99
   tau:                   0.005
   train_frequency:       4
-  target_update_frequency: 1
+  target_update_frequency: 4
   batch_size:            32
   initial_alpha:         0.1
   target_entropy_scale:  0.98
   learning_starts:       5_000
+  max_grad_norm:         5
 
