--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
     "neptune-scale>=0.27.0",
     "tensorboard>=2.20.0",
     "popgym-arcade>=0.0.4",
+    "uniplot>=0.21.4",
 ]
 
 [project.optional-dependencies]
