--- a/memory_rl/conf/algorithm/torso/xlstm.yaml
+++ b/memory_rl/conf/algorithm/torso/xlstm.yaml
@@ -1,7 +1,7 @@
 _target_: memory_rl.networks.recurrent.xLSTMCell
 
 features: 128
-pattern: ["s", "m", "s"]  # any order/length
+pattern: ["m", "s"]  # any order/length
 
 s_kwargs:
   num_heads: 4
@@ -12,6 +12,5 @@ s_kwargs:
 m_kwargs:
   num_heads: 4
   up_proj_factor: 2
-  conv1d_kernel_size: 4
-  qkv_proj_blocksize: 4
+  conv_kernel_size: 4
 
